--- a/css/theme.css
+++ b/css/theme.css
@@ -15,6 +15,7 @@ body {
 	font-family: 'Exo', sans-serif;
 	font-size: 80px;
 	font-weight: 200;
+	text-align:center;
 }
 
 .header span{
@@ -66,6 +67,15 @@ body {
   	padding:50px;
   	border-radius: 15px;
  	background-color:orange;
+ }
+
+ .tekstBlok {
+ 	width:auto;
+ 	height:auto;
+ 	margin-left: auto;
+  	margin-right: auto;
+  	padding:20px;
+  	text-align:center;
  }
 
 .btn.btn-default {
@@ -171,5 +181,57 @@ body {
 }
 
 /*einde classes voor de over ons pagina:*/
+
+
+
+/*De classes voor de contact pagina:*/
+
+#id_name{
+	width: 55%;
+	height: 25px;
+	background: transparent;
+	border: 2px solid white;
+	border-radius: 2px;
+	color: white;
+	font-family: 'Exo', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	padding: 4px;
+	margin-top: 10px;
+	margin-left:37px;
+}
+
+#id_email{
+	width: 55%;
+	height: 25px;
+	background: transparent;
+	border: 2px solid white;
+	border-radius: 2px;
+	color: white;
+	font-family: 'Exo', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	padding: 4px;
+	margin-top: 10px;
+	margin-left:37px;
+}
+
+#id_comment{
+	width: 55%;
+	height: 200px;
+	background: transparent;
+	border: 2px solid white;
+	border-radius: 2px;
+	color: white;
+	font-family: 'Exo', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	padding: 5px;
+	margin: 10px;
+}
+
+
+
+
 
 
