--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -10,7 +10,6 @@
 {% block jumbotron %}
 <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1></h1>
       </div>
 {% endblock %}
 
@@ -21,6 +20,10 @@
 <div class="header">
 			<div>Contact</div>
 		</div>
+
+<div class="tekstBlok">
+		Voor meer informatie of vragen neem contact met ons op via onderstaand formulier
+	</div>
 
 <div class="infoBlok">
 
