--- a/profiles/templates/about.html
+++ b/profiles/templates/about.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+r{% extends 'base.html' %}
 
 {% block content %}
 
@@ -48,7 +47,7 @@
 	</div>	
 	
 	<div class="voorstelTekst">
-		Hoi! Ik ben het nieuwese teamlid van MealPlanner! Op dit moment werk ik aan de design van de website.
+		Hoi! Ik ben het nieuwste teamlid van MealPlanner! Op dit moment werk ik aan de design van de website.
 		Ik werk dus vooral met css. Werken bij MealPlanner is zo gaaf. Nu ik zelf ook MealPlanner gebruik eet ik veel gevarieerder. 
 		Mijn lievelings eten is Monchoe Taart. Ja dat is niet echt een maaltijd maar als dessert of op een verjaardag vind ik dit verrukkelijk.
 	</div>
@@ -87,6 +86,9 @@
       
 
 {% endblock %}
+
+
+
 
 
 
