--- a/profiles/templates/navbar.html
+++ b/profiles/templates/navbar.html
@@ -15,19 +15,17 @@
           {% url 'home' as home %}
           {% url 'about' as about %}
           {% url 'contact' as contact %}
+          {% url 'profiel' as profiel %}
             <li {% if request.path == home %} class="active" {% endif %}><a href="{% url 'home' %}">Home</a></li>
             <li {% if request.path == about %} class="active" {% endif %}><a href="{% url 'about' %}">Over Ons</a></li>
             <li {% if request.path == contact %} class="active" {% endif %}><a href="{% url 'contact' %}">Contact</a></li>
+            
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profiel <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
+                <li><a href="{% url 'instellingen' %}">Instellingen</a></li>
+                <li><a href="{% url 'voorkeurlijst' %}">Voorkeur Lijst</a></li>
+                <li><a href="#">Something else here</a></li> 
               </ul>
             </li>
           </ul>
