--- a/css/login.css
+++ b/css/login.css
@@ -45,12 +45,53 @@ body{
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 50px;
+	text-align:center;
 }
+
+.infoLijstBlok{	
+	background: rgba(255, 255, 255, 0.6);
+	padding: 10px;
+	border-radius: 5px;
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 50px;
+	text-align:center;
+}
+
+.opslaan{ 
+	width: 100%;
+	height:auto
+	background: transparent;
+	border: transparent;
+	cursor: pointer;
+	color: black;
+	font-family: 'Exo', sans-serif;
+	font-size: 20px;
+	font-weight: 400;
+	padding: 6px;
+	margin-top: 10px;
+}
+
 
 h1{
 	font-family: 'Exo', sans-serif;
 	font-weight:200;
 	text-align:center;
+}
+
+#id_vraag{
+	width: 30%;
+	height: 25px;
+	background: transparent;
+	border: 2px solid white;
+	border-radius: 2px;
+	color: black;
+	font-family: 'Exo', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	padding: 4px;
+	margin-top: 10px;
 }
 
 #id_username{
@@ -194,3 +235,4 @@ width: 55%;
 	padding: 6px;
 	margin-top: 10px;
 }
+
