--- a/css/theme.css
+++ b/css/theme.css
@@ -63,9 +63,9 @@ body {
  	width:800px;
  	height:auto;
  	margin-left: auto;
-  	margin-right: auto;
-  	padding:50px;
-  	border-radius: 15px;
+  margin-right: auto;
+  padding:50px;
+  border-radius: 15px;
  	background-color:orange;
  }
 
@@ -73,14 +73,41 @@ body {
  	width:auto;
  	height:auto;
  	margin-left: auto;
-  	margin-right: auto;
-  	padding:20px;
-  	text-align:center;
+  margin-right: auto;
+  padding:20px;
+  text-align:center;
  }
 
 .btn.btn-default {
 	background-color:orange;
 }
+
+
+
+
+/*De classes voor de profiel pagina:*/
+
+.deLijst{
+  width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:350px;
+}
+
+
+.profielHeader {
+	float:left;
+    text-align:center;
+    color:white; 
+    width: 100%;
+    height:275px;
+    background-image:url(https://i.pinimg.com/originals/82/12/ef/8212efe53fbea5e06395a17bfa0bc244.jpg);
+ }
+
+
+
+/*einde voor de profiel pagina:*/
+
 
 
 
@@ -229,6 +256,9 @@ body {
 	padding: 5px;
 	margin: 10px;
 }
+
+
+
 
 
 
